welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:11: error: not found: value x
		for ( k <- 0 to x-1){
                                ^