welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
	var y = getMondeLargeur();
	var z = getMondeHauteur();
	var tao = rassemblage();
	for( j <- 1 to y-1){
		droite();
		recule();
		gauche();
		avance();
		for ( k <- 0 to x-1){
			setCouleurBrosse(tao(k));
			baisseBrosse();
			leveBrosse();
			avance()
	}
		}	
	def rassemblage():Array[Color] ={
	var x = getMondeHauteur();
	var table = new Array[Color](x);
	for (i <- 0 to x-1){
		table(i) = getCouleurSol();
		avance();
	}
	return table;
}

	def print(){
		var x = getMondeHauteur();
		
}
	
}


	


